tests/errors/test_65.x
// No such function in module

import "standard.x" as std;

fn main() -> void {
    std::log("hello, world!\n");
}